@@ -1,5 +1,7 @@
 AUX fastd-0.17.initd 807 SHA256 3b88cb202c6e524f654391372b2d4bdb22444f1e30fece12190d4e65202d1f27 SHA512 3adb958cf579967c8f112cac1bb3110e0d530e3c74b4646762f310bcd9bbebd39e7a474c30c4fd497fa2eba3dc30c14587759feed71c279c1d5e7a04f343a3f9 WHIRLPOOL fb2677b8d6b8e11dab32252dad3391bf1abb79665d790e08528ec0d7c69a08a98c3378c034d105caf87e3ab6b29b4f8f473a0bb22c85c3adab675db34d817e75
 DIST fastd-17.tar.xz 151524 SHA256 26d4a8bf2f8cc52872f836f6dba55f3b759f8c723699b4e4decaa9340d3e5a2d SHA512 6bdf5df1d75c462d52a8709718c183dfe173b5d56a4c29592d4cbb4c35f9f31efa900bb575490384b878a421e1d197454036b39d9b93154b6ae8c876f30f30c2 WHIRLPOOL 60e03d4cb1929896530c83218d86efad435e5870d1dcf5842a4ac40ca25c712ec5a6a609c1ec1df0a3146d6116307ba8dfc436d422f90ef4206ae861d6d97aa7
+DIST fastd-18.zip 371511 SHA256 0bc20061833869a61fd17e03bc36746655c58c2534990ad748138c394fefc249 SHA512 da557d9868b6d85e43b5cbbd05f205d814cf05907c7d8889e9080067b6efdf682f9f3ca8dbb0f2b708dc7ce18270ebe927a597b25dbfb0db00e2ee2469036dd4 WHIRLPOOL c06fd8d53207aeacefb0ca6dc1bcade0e9dd4d1545394116fc3349c33f2752c5cd14aeccae83af54de5487c4636774101887e5ebc0d517cf4d8fc79011e76d6b
 EBUILD fastd-17.ebuild 1206 SHA256 92c28d7f291404b017618b2cf60912605fcc4b0eaf1a7aab778d6268563d1118 SHA512 f28bfc1b01788d1c26a8adb4c1a75fb0a068bf4121ac9162d47198063309b768e89350a8a1f1a2e7a683cb73a7a0bb0614ca57088abfd05e1395ee3110f897e0 WHIRLPOOL eebfd8f288968ba637f991a889376ddb45e941808833e4a588bc1e45873ff83b3c4f3774f8d246377a559445e7e13c09ada79b77bc1f5a16767247cf1f6ca4b9
-MISC ChangeLog 152 SHA256 cce7d8e7c6bfe86ab49a52d03bdf8e098a949c7c3bae9d1b5a4b19485a7996b3 SHA512 7923fc803175bff14b69b6210e5725ccc71b58b4e1ba58998b2e5bcc4daee1cb32d4d9cefcb3712623099364ba7f56e68f5140c3c8a27d09a79e682f4564af50 WHIRLPOOL c8354dddebb0cf35f9e656a96e50395264c805ac18f1779807b8d7fcd46e7d8378500742a0d9042a8f580e0433c687f7cf043d7cac6748a8c323f39ad0e8c8c5
-MISC metadata.xml 452 SHA256 a9576bf841dab5db63df8bf33f13557d631d9d8cfb9cefccfee3a5562e2a2da6 SHA512 db6e4eb9e13c351f16296765726ff97bec5619f53dccc9020c328e50c5baddcb6a5074ec72df7ea5c71be7bf55d3cfb04b43debfff196a6450257547d1386725 WHIRLPOOL a0fb8fc6d0c8b12c6b4090cd053fbdcd1bc11dd1d247bd01e141b380c9f0d486c8895e29b4b00aaa005fcddfa9b4ce086a0d2264b1fc5972fbca0ca69646d4a2
+EBUILD fastd-18.ebuild 1174 SHA256 53877f01c893c201d961d7e47e2eed2c2485a6abb408d8032b480465b1b2d932 SHA512 c5dffe0665d17e2eb5d31d75f7ac945f28ca5d04b199304dcc29a367a631cef7f546bce3649aba840db5efd5989bfadc31acc876156ab8a51b0131b14150f134 WHIRLPOOL cb4d6d4137626b4fd823cfd569ada76b1d0788526949ab8712b429e5955f42c2f1789f951b1bf5b4f6068beaa370ca711fe0271961a2eecab26a3b9dc849e6d3
+MISC ChangeLog 285 SHA256 e654c0b2025cdc9cbd3f73c77703477a79cc39cfdd3b4f5a1931c2500ff7e6c2 SHA512 03053b5a6f5eda68ec016d72d5cd2b017b75a8c0ebdad9d270ac807eaa89bed508ae92c4a48ab7b8ec97dfbfea89af682f24f11c41b960898d75c19a656fc634 WHIRLPOOL ed0ad4d383ce6fd82bfee02c62e892dc51da179ba40a1f7d9ab307ea3376018890da56138696a68bdb87c4bb8f8e9f8635fe9f3fd75a1179113b1c0f69886f4b
+MISC metadata.xml 466 SHA256 5a397bd43f0759ea598e5b7f05e57720948b04fd2c2a2c0cd7d7344487fc3faa SHA512 6e2ca3fc444ae92310e5c0e54f4b6247bf65fc24956acd097e4a8449059cdb007bc951d82285a2ce02f09f8bd2b5d1047ff2d3f8caffb564fde177dcf674438b WHIRLPOOL 65442ca5f688e9bfccfada314ca98bb8aacbde7193ad559a9593848ae037d60b2dc4b5a95fb4e3aadd81cd31202cc943b8e127be3ca67abc91bcab9e16bbed44
